# Edge-BS-RoFormer-DroneNoise-LibriMix

./: .gitignore  AGENTS.md  README.md  analyze_results.ipynb  create_dataset.py  data_utils.py  dataset.py  explore_data.ipynb  final_valid.py  flake.nix  generate_comparison.py  metrics.py  pyproject.toml  replicate_paper.py  replicate_paper.sh  requirements.txt  sync_results.sh  test_flash_attention.py  train.py  utils.py  valid.py
.cursor/skills/examine-presentation-slides/: SKILL.md
.cursor/skills/generate-model-comparisons/: SKILL.md
.cursor/skills/generate-slidev-presentation/: SKILL.md  generate_slides.py
configs/: 1_Nothing.yaml  2_FA.yaml  3_FA_RoPE(48).yaml  3_FA_RoPE(64).yaml  5_Baseline_dcunet.yaml  7_Baseline_dptnet.yaml  8_Baseline_htdemucs.yaml  9_Diffusion_Buffer_BBED.yaml
docs/: debug-training-loop.md  diffusion-buffer-paper.md  diffusion-prompt.md
models/: dcunet.py  demucs4ht.py  diffusion_buffer.py
models/dptnet/: utils.py
models/edge_bs_rof/: attend.py  edge_bs_rof.py  mel_band_roformer.py
