[project]
name = "edge-bs-roformer-dronenoise-librimix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audiomentations==0.41.0",
    "auraloss==0.4.0",
    "beartype==0.20.2",
    "einops==0.8.1",
    "librosa==0.10.2.post1",
    "loralib==0.1.2",
    "matplotlib==3.10.3",
    "ml-collections==1.1.0",
    "numpy==2.2.5",
    "omegaconf==2.3.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "pedalboard==0.9.16",
    "pesq==0.0.4",
    "pystoi==0.4.1",
    "pyyaml==6.0.2",
    "rotary-embedding-torch==0.8.6",
    "soundfile==0.13.1",
    "thop==0.1.1.post2209072238",
    "torch==2.6.0",
    "torch-log-wmse==0.3.0",
    "torchaudio==2.6.0",
    "tqdm==4.67.1",
    "wandb>=0.22.3",
    "python-dotenv==1.0.1",
    "demucs>=4.0.1",
    "openpyxl>=3.1.5",
    "ipykernel>=7.1.0",
    "pip>=25.3",
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
]
